# hackmit-2018

./: .gitignore  README.md  find.ipynb
C# gui/KinectStreams/: App.xaml.cs  KinectStreams.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
cppbe/: CMakeLists.txt  algo.cpp  algo.h  main.cpp
cppbe/tests/: algo.cpp
